<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tourmaline</groupId>
    <artifactId>TourmalineEngine</artifactId>
    <version>0.0.3</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <lwjgl-version>3.3.3</lwjgl-version>
        <joml-version>1.10.6</joml-version>
        <imgui-version>1.87.7</imgui-version>

    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.joml/joml -->
        <dependency>
            <groupId>org.joml</groupId>
            <artifactId>joml</artifactId>
            <version>${joml-version}</version>
        </dependency>

        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
            <version>${lwjgl-version}</version>
        </dependency>

        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-opengl</artifactId>
            <version>${lwjgl-version}</version>
        </dependency>

        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
            <version>${lwjgl-version}</version>
        </dependency>

        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-stb</artifactId>
            <version>${lwjgl-version}</version>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-assimp</artifactId>
            <version>${lwjgl-version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.spair</groupId>
            <artifactId>imgui-java-binding</artifactId>
            <version>${imgui-version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.spair</groupId>
            <artifactId>imgui-java-lwjgl3</artifactId>
            <version>${imgui-version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>6.4.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <dependencies>
                <!-- LWJGL Windows native libraries -->
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-windows</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-opengl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-windows</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-glfw</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-windows</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-stb</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-windows</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-assimp</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-windows</classifier>
                </dependency>

                <dependency>
                    <groupId>io.github.spair</groupId>
                    <artifactId>imgui-java-natives-windows</artifactId>
                    <version>${imgui-version}</version>
                </dependency>

            </dependencies>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <dependencies>
                <!-- LWJGL Linux native libraries -->
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-linux</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-opengl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-linux</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-glfw</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-linux</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-stb</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-linux</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-assimp</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-linux</classifier>
                </dependency>

                <dependency>
                    <groupId>io.github.spair</groupId>
                    <artifactId>imgui-java-natives-linux</artifactId>
                    <version>1.87.0</version>
                </dependency>

            </dependencies>
        </profile>
        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <dependencies>
                <!-- LWJGL MacOS native libraries -->
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-macos</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-opengl</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-macos</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-glfw</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-macos</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-stb</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-macos</classifier>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-assimp</artifactId>
                    <version>${lwjgl-version}</version>
                    <classifier>natives-macos</classifier>
                </dependency>
                <dependency>
                    <groupId>io.github.spair</groupId>
                    <artifactId>imgui-java-natives-macos</artifactId>
                    <version>1.87.0</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>


</project>